const mongoose = require('mongoose');

const userSchema = new mongoose.Schema(
  {
    email: { type: String, unique: true, required: true, lowercase: true, trim: true },
    passwordHash: { type: String, required: true },
    role: { type: String, enum: ['admin', 'teacher', 'student'], required: true },
    student: { type: mongoose.Schema.Types.ObjectId, ref: 'Student', default: null },
  },
  { timestamps: true },
);

module.exports = mongoose.model('User', userSchema);
